themes/solr/static/css/base.css
/* ... */
.button {
  background-color: #ff833d;
  text-transform: uppercase;
}

.button:hover,
.button:focus,
.button:active {
  background-color: #ff5c00;
}

.annotation {
  color: #262130;
  text-transform: uppercase;
  margin-bottom: 0.8em;
  font-weight:400;
}

/*
 * PAGES
 */

.homepage h1.red {
  color: #d9411e;;
}

.page h1, .page h2, .page h3 {
  font-family: 'Raleway', 'Helvetica Neue', sans-serif;
  color: #262130;
}

.page h1, .subnav h1 , h1.news {
  font-weight:300;
}

.subnav h1 , h1.news {
  margin-bottom: 30px;
}

.subnav h1 , h1.news {
  line-height:0.8;
}

.page h1 small, .subnav h1 small, h1.news small {
  font-size:0.4em;
  color:#333;
}

.page h2, .page h3 {
  font-weight:500;
}

.page h2 {
  font-size:1.5em;
}

.page h3 {
  font-size:1.4em;
}

.page p, .page ul li, .page ol li {
  color:#333;
}

.page a {
  color: #D9411E;
}

.page .date {
  color: #D9411E;
  text-transform:uppercase;
  font-weight:500;
}

#resources {
  text-align:center;
}

pre {
  white-space:pre-wrap;
  overflow:hidden;
}

/*
 * Alternate styles (blue sections)
 */
.alternate .annotation {
  color: #D9411E;
}

.alternate h1 {
  font-weight: 100;
  color: #212121;
}

.alternate h2 {
  font-weight: 300;
}

hr {
  margin-bottom: 2em;
  color:#e4e2dd;
}

/*
 * Small styles
 */

.small h1 {
  font-size: 2em;
}

.small h2 {
  font-size: 1.6em;
}

.small h3 {
  font-size: 1.4em;
}

.small h4 {
  font-size: 1.2em;
}

.small h5 {
  font-size: 1em;
}

.small p {
  font-size: 0.9em;
}

/*
 * Section styles
 */
section {
  padding: 40px 0;
  color: #333;
  text-align:center;
}

section.gray {
  background-color: #f9f8f8;
}

section.orange {
  background-color: #D9411E;
  color: #fff;
  padding:60px 0 80px 0;
  text-align:center;
  position:relative;
}

section.orange .annotation {
  color:#fff;
}

section.orange h1 {
  color: inherit;
}

section.orange h2 {
  color: inherit;
}

section.orange p {
  color:#fff;
  font-weight: 300;
  font-size: 1.1em;
}

section.orange .down-arrow {
  position: absolute;
  left: 50%;
}

section.orange .down-arrow .red {
  color: #ff833c;
}

section.orange .down-arrow a {
  color:#fff;
}

section.orange.full-width {
  margin-left: -100%;
  margin-right: -100%;
  margin-bottom: 2em;
}


/*
 * Hero
 */
.hero {
  background-color: #262130;
  color: #fff;
  position:relative;
  padding: 100px 0;
}

.hero h1,
.hero p {
  color: #fff;
}

.hero p {
  margin-bottom: 40px;
  font-weight: 300;
  font-size: 1.1em;
}

.hero .button {
  background-color: #305cb3;
}

.hero .button:hover,
.hero .button:focus,
.hero .button:active {
  background-color: #0045cd;
}

.hero .down-arrow {
  position: absolute;
  bottom: -80px;
  left: 50%;
}

.hero .down-arrow .red {
  color: #D9411E;
}

.hero .down-arrow a {
  color:#fff;
}

.security {
  background-color: #FFBF78;
  padding-top: 10px;
  padding-bottom: 0px;
  display: none;
}

.security a {
  color: #262130;
}

.topnews {
  background-color: #59BD81;
  padding-top: 15px;
  padding-bottom: 0px;
  display: none;
}

.topnews .row p a {
  color: #262130;
  font-size: larger;
}

/*
 * Modal effect for the sticky-note alert on redirect from lucene
 * From https://css-tricks.com/considerations-styling-modal/
 * Credit Chris Coyier ©2016. Coped from CodePen with permission.
 */

.sticky-container {
  z-index: 4000;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -70%);
  width: 600px;
  max-width: 100%;
  height: 300px;
  max-height: 100%;
  display: block;
}

.modal-overlay {
  z-index: 3000;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;

  background: rgba(0, 0, 0, 0.6);
}

.sticky-container .close-button {
  position: absolute;

  /* don't need to go crazy with z-index here, just sits over .modal-guts */
  z-index: 1;

  top: 20px;

  /* needs to look OK with or without scrollbar */
  right: 30px;

  border: 0;
  background: black;
  color: white;
  padding: 5px 10px;
  font-size: 1.3rem;
}

.closed {
  display: none;
}

/*
 * Sticky-note effect for first visit popup message
 * Thanks to Pascal Thormeier for sharing on CodePen with a permissive license
 * https://dev.to/thormeier/fully-responsive-html-css-sticky-note-4okl
 */

.sticky-outer {
  display: flex;
  padding-top: 92.5925926%;
  /*position: relative;*/

  width: 100%;
}

.sticky {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

/* Shadow behind the sticky note */
.sticky:before {
  box-shadow: -2px 2px 15px 0 rgba(0, 0, 0, 0.5);
  background-color: rgba(0, 0, 0, 0.25);
  content: '';
  width: 90%;
  left: 5px;
  height: 83%;
  position: absolute;
  top: 30%;
}

/* The sticky note itself */
.sticky-content {
  background: linear-gradient(
    180deg,
    #FFFFBB 0%,
    #FFFFDD 12%,
    #FFFFDD 75%,
    #FFFFBB 100%
  );
  width: 100%;
  height: 100%;

  padding: 50px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  font-family: 'Kalam', cursive;
  font-size: 1rem;

  clip-path: url(#stickyClip);
}

.sticky-content .break {
  flex-basis: 100%;
  height: 0;
}

.sticky-content h1 {
  font-family: 'Kalam', cursive;
  font-size: 2rem;
}

/* Add responsiveness */
@media screen and (min-width: 640px) {
  .sticky:before {
    height: 79%;
    width: 90%;
  }
  .sticky-content, .sticky-content h1 {
    font-size: 1.5rem;
  }
  .sticky-content h1 {
    font-size: 2.5rem;
  }
}

@media screen and (min-width: 768px) {
  .sticky:before {
    height: 75%;
    width: 90%;
  }
  .sticky-content, .sticky-content h1 {
    font-size: 1.7rem;
  }
  .sticky-content h1 {
    font-size: 2.7rem;
  }
}

@media screen and (min-width: 1024px) {
  .sticky:before {
    height: 73%;
    width: 90%;
  }
  .sticky-content {
    font-size: 1.95rem;
  }
  .sticky-content h1 {
    font-size: 2.95rem;
  }
}

/*
 * Footer
 */
footer {
  background-color: #262130;
  color: #f9f8f8;
  padding: 40px 0 20px 0;
}

footer h4 {
  padding-bottom:15px;
  text-transform:uppercase;
  font-size: 1em;
}
/* ... */

